# git-good-guide

./: .env  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
jobs/: run_script.sh
notebooks/: modules_in_notebooks.ipynb
scripts/: dotenv_demo.py  modules.py
src/my_cool_package/logger/: setup_logger.py
src/my_cool_package/utils/: test_module.py
tests/: test_logger.py
