[project]
name = "git-good-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "ruff>=0.15.15",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
